[package]
name = "tokimo-package-online-media-ingest"
version = "0.1.0"
edition = "2024"
description = "Online media ingest service for nex-media"

[[bin]]
name = "tokimo-package-online-media-ingest"
path = "src/main.rs"

[lib]
name = "tokimo_package_online_media_ingest"
path = "src/lib.rs"


[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "stream"] }
scraper = "0.26"
sevenz-rust2 = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unrar = "0.5"
url = { workspace = true }
uuid = { workspace = true }
zip = { version = "8", default-features = false, features = ["deflate"] }
tokimo-package-ffmpeg = { path = "../tokimo-package-ffmpeg" }
tokimo-package-client-api = { path = "../tokimo-package-client-api" }

[lints]
workspace = true
