[package]
name = "tokimo-package-online-media-ingest"
version = "0.1.0"
edition = "2024"
description = "Online media ingest service for nex-media"

[[bin]]
name = "tokimo-package-online-media-ingest"
path = "src/main.rs"

[lib]
name = "tokimo_package_online_media_ingest"
path = "src/lib.rs"


[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls", "cookies", "stream"] }
scraper = "0.26"
sevenz-rust2 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unrar = "0.5"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
tokimo-package-ffmpeg = { path = "../tokimo-package-ffmpeg" }
tokimo-package-client-api = { path = "../tokimo-package-client-api" }
